stages/stage4/k8s/infra/redis/catalog-redis-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: catalog-redis
  namespace: apollo11-infra
  labels:
    app: catalog-redis
    stage: "4"
spec:
  serviceName: catalog-redis-headless
  replicas: 1
  selector:
    matchLabels:
      app: catalog-redis
  template:
    metadata:
      labels:
        app: catalog-redis
        stage: "4"
    spec:
      serviceAccountName: apollo11-infra
      terminationGracePeriodSeconds: 30
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          command: ["redis-server"]
          volumeMounts:
            - name: redis-data
              mountPath: /data
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
