stages/stage4/k8s/infra/redis/notification-redis-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-redis-allow-specific
  namespace: apollo11-infra
spec:
  podSelector:
    matchLabels:
      app: notification-redis
  policyTypes:
    - Ingress
  ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                name: apollo11-apps
            podSelector:
              matchLabels:
                app: notification
